Actualizadas dependencias, y silenciados warnings de chequeo de null.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=SGPS
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/ianpineda?serverTimeZone=America/Bogota
+spring.datasource.url=jdbc:mariadb://localhost:3306/sena?serverTimeZone=America/Bogota
 spring.datasource.username=ianpineda
 spring.datasource.password=Abcd1234*
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
