Arreglos menores en archivos de configuración y de Gradle.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:keystore/sgps.p12
 server.ssl.key-store-password=Abcd1234*
 server.ssl.key-alias=sgps
-server.ssl.enabled=true
+server.ssl.enabled=false
